<resources>
    <string name="app_name">Tracker</string>
    <string name="menu_help">Help</string>
    <string name="menu_wayPoint">Waypoints</string>
    <string name="menu_lockTrack">Lock Track</string>

    <string name="track_name_hint">Name</string>
    <string name="track_description_hint">Description</string>
    <string name="track_location_hint">Location</string>
    <string name="track_startCoords_hint">Start Coordinates</string>
    <string name="track_latitude_hint">Latitude</string>
    <string name="track_longitude_hint">Longitude</string>
    <string name="track_staticTrack_hint">Static Track</string>
    <string name="track_button_submit">Submit</string>
    <string name="track_button_edit">Edit</string>
    <string name="map_toolbar_edit">Edit path</string>
    <string name="map_toolbar_add">Add path point</string>


    <string name="track_distance">Track Distance</string>
    <string name="track_elevation">Track Elevation</string>

    <string name="trackrecording_header">Start recording to new track</string>
    <string name="trackrecording_btn_start">Start</string>
    <string name="waypoint_dialog_header">Waypoint header</string>
    <string name="waypoint_dialog_text">Waypoint text</string>

    // map bottom sheet
    <string name="map_bottomsheet_header">Track details</string>

    <string name="tracker_edit">Edit</string>
    <string name="tracker_delete">Delete</string>
    <string name="tracker_save">Save</string>
    <string name="tracker_cancel">Cancel</string>
    <string name="tracker_update">Update</string>
    <string name="tracker_foldername">Folder Name</string>
    <string name="waypoint_image_description">Image selected for waypoint</string>
    <string name="waypoint_video_header">Videos</string>
    <string name="waypoint_image_header">Images</string>
    <string name="waypoint_audio_header">Audios</string>

    <string name="selectTrack_dialog_title">Select Track</string>
    <string name="selectTrack_dialog_message">Track to display on map</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="gpxtrackingvalues_header">Tracking</string>
    <string name="layout_header">Layout</string>

    <!-- Gpx Preferences -->
    <string name="gpx_tracking_distance">Distance (meter)</string>
    <string name="gpx_tracking_interval">Interval (seconds)</string>
    <string name="gpx_tracking_default">10</string>
    <string name="gpx_interval_default">1</string>
    <string name="gpx_distance_key">gpx_distance</string>
    <string name="gpx_interval_key">gpx_interval</string>

    <!-- Layout Preferences -->
    <string name="layout_colorschema">Colore Schema</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
