<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">


    <LinearLayout
        android:id="@+id/waypoint_btn_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >


        <Button
            android:id="@+id/waypoint_btn_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/tracker_edit" />

        <Button
            android:id="@+id/waypoint_btn_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/tracker_delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/waypoint_header"
        style="@style/MapBottomSheet"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/waypoint_dialog_header"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waypoint_btn_toolbar" />

    <TextView
        android:id="@+id/waypoint_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:breakStrategy="high_quality"
        android:ems="10"
        android:singleLine="false"
        android:text="@string/waypoint_dialog_text"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waypoint_header" />

    <HorizontalScrollView
        android:id="@+id/waypoint_images_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waypoint_description">

        <LinearLayout
            android:id="@+id/waypoint_images_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/waypoint_image_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:paddingEnd="8dp"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
