<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.e.tracker.track.TrackRecordingFragment" >

    <data>
        <variable
            name="newTrackViewModel"
            type="com.e.tracker.track.TrackViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newTrack_Constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8BC34A">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/trackrecording_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/trackrecording_header"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/trackrecording_name"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/track_name_hint"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:paddingBottom="24dp"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/trackrecording_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/trackrecording_btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>