<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#050505"
    android:paddingBottom="0dp">


    <EditText
        android:id="@+id/waypoint_header"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/track_name_hint"
        android:textColorHint="@color/white_texthint_color"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:singleLine="true"
        android:textColor="@color/white_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/waypoint_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="none"
        android:hint="@string/track_description_hint"
        android:textColorHint="@color/white_texthint_color"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textAutoComplete"
        android:singleLine="false"
        android:textColor="@color/white_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waypoint_header" />

    <LinearLayout
        android:id="@+id/waypoint_media_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waypoint_description">

        <include layout="@layout/waypoint_media_edit"></include>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/waypoint_btn_toolbar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waypoint_media_all">

        <Button
            android:id="@+id/waypoint_btn_save"
            style="@style/Widget.MaterialComponents.Button.TextButton.Snackbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/trackListItem_background"
            android:backgroundTint="@color/trackListItem_background"
            android:insetBottom="0dp"
            android:text="@string/tracker_save"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/waypoint_btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Snackbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/trackListItem_background"
            android:backgroundTint="@color/trackListItem_background"
            android:insetBottom="0dp"
            android:text="@string/tracker_cancel"
            app:cornerRadius="0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
