<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.e.tracker.track.NewTrackFragment" >

    <data>
        <variable
            name="newTrackViewModel"
            type="com.e.tracker.track.TrackViewModel" />
        <variable
            name="trackType"
            type="androidx.databinding.ObservableField" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newTrack_Constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8BC34A">


        <!--<androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

        <LinearLayout
            android:id="@+id/newTrack_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/track_name"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/track_name_hint"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:paddingBottom="24dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/track_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/track_description_hint"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:singleLine="false" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:clipChildren="false"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_walk"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_directions_walk_black_24dp"
                    app:iconGravity="textStart"
                    app:iconSize="56sp"
                    app:iconTint='@{trackType == "walking" ?  @color/icon_selected : @color/icon_not_selected }' />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_bike"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:icon="@drawable/ic_directions_bike_black_24dp"
                    app:iconGravity="textStart"
                    app:iconSize="56sp"
                    app:iconTint='@{trackType == "biking" ?  @color/icon_selected : @color/icon_not_selected }' />

            </TableRow>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                tools:layout_editor_absoluteY="165dp">

                <EditText
                    android:id="@+id/track_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/track_location_hint"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:paddingTop="24dp"
                    android:singleLine="false"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_map"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_map"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layoutDirection="inherit"
                    android:paddingStart="8dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    app:icon="@drawable/ic_map_black_24dp"
                    app:iconSize="48sp"
                    app:iconTint="@color/color_main_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/track_location"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_startCoords_hint"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_coordinates"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_add_black_24dp"
                    app:iconGravity="textStart"
                    app:iconSize="48sp"
                    app:iconTint="@color/color_main_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/track_longitude"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/track_latitude"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/track_latitude_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/track_longitude"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.428" />

                <EditText
                    android:id="@+id/track_longitude"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/track_longitude_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_coordinates"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/track_latitude"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.428" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/track_button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_button_submit" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
